# django-simple-task

./: .flake8  .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
django_simple_task/: __init__.py  apps.py  middleware.py  task.py  worker.py
docs/: conf.py  how-it-works.md  index.rst  requirements.txt
docs/api/: django_simple_task.rst  modules.rst
tests/: app.py  settings.py  test_django_simple_task.py
