[tool.poetry]
name = "django-simple-task"
version = "0.1.1"
description = "Task runner for Django 3 without requiring other services"
readme = "README.md"
authors = ["Shen Li <dustet@gmail.com>"]
repository = "https://github.com/ericls/django-simple-task"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <4"
asgiref = "^3.2.3"

[tool.poetry.dev-dependencies]
django = "^3.0.0"
pytest = "^5.2"
ipython = "^7.11.0"
ipdb = "^0.12.3"
black = {version = "^19.10b0", allow-prereleases = true}
async-asgi-testclient = "^1.2.2"
pytest-asyncio = "^0.10.0"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
